// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render info for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense 
    totalling 
    $3.45
  </h1>
</div>
`;

exports[`should correctly render info for no expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     expenses 
    totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render correctly for 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     expenses 
    totalling 
    $2,342.34
  </h1>
</div>
`;
